fixed spacing for animated labels

--- a/ui/components/form-element/animate/_index.scss
+++ b/ui/components/form-element/animate/_index.scss
@@ -35,7 +35,7 @@ input[placeholder]::placeholder {
 }
 
 .nds-form-element__control.nds-form-element__control-animated-label {
-
+  margin-top: .300rem;
   .nds-form-element__label {
     top: -1.75rem;
     #{$left}: 0;
@@ -44,7 +44,7 @@ input[placeholder]::placeholder {
     #{$right}: 0;
     pointer-events: none;
     overflow: visible;
-
+    
     .nds-button_icon {
       border: 0;
       top: 0.05rem;
@@ -95,7 +95,7 @@ input[placeholder]::placeholder {
       z-index: 1;
       top: -1.75rem;
       #{$left}: 0;
-
+      
       .nds-button_icon {
         top: -0.05rem;
       }
